# antic-historian

./: .gitignore  .mcp.json  CASE-STUDY.md  CLAUDE.md  LICENSE  README.md  docker-compose.yml  module-10-build-plan.md  phase-3-plan.md  phase-4-plan.md  phase-6-3-security-plan.md  phase-6-plan.md  project-plan.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/evals/attacks/: attacks.yaml
backend/evals/golden/: contradiction.yaml  cross-book.yaml  literal.yaml  multi-hop.yaml  out-of-scope.yaml  synonym.yaml  synthesis.yaml
backend/evals/runs/: 2026-06-11T18-23-15Z-dense-v1-smoke.json  2026-06-11T19-04-29Z-dense-v1-smoke.json  2026-06-11T19-35-45Z-dense-v1.json  2026-06-11T19-54-52Z-dense-v1-rag.json  2026-06-12T08-26-35Z-gen-baseline-v1-agent.json  2026-06-12T09-27-11Z-gen-baseline-v1-judged-agent.json  2026-06-12T10-06-34Z-gen-baseline-v1-judge-v2-agent.json  2026-06-12T12-11-37Z-dense-8b-1024-v1-rag.json  2026-06-12T14-11-20Z-dense-8b-2000-nebius-v1.json  2026-06-12T15-21-10Z-dense-8b-1024-nebius-v1-rag.json  2026-06-12T16-56-58Z-gen-dense-8b-judged-agent.json  2026-06-12T21-35-33Z-dense-v1-rag.json  2026-06-12T22-12-51Z-dense-v1-rag.json  2026-06-13T11-22-00Z-dense-v1-rag.json  2026-06-13T12-17-24Z-gen-baseline-v2-judge-v3-agent.json  2026-06-13T13-59-08Z-gen-baseline-v2-judge-v3.1.json  2026-06-13T18-31-18Z-dense-v1.json  2026-06-13T19-52-16Z-gen-baseline-v2-judge-v3.1-full-agent.json  2026-06-14T14-57-37Z-gen-ctx-v1-agent.json  2026-06-14T14-59-55Z-dense-ctx-v1-rag.json  2026-06-14T17-53-56Z-rerank-qwen3-v1-rag.json  2026-06-14T17-58-57Z-rerank-bge-v1-rag.json  2026-06-14T18-12-33Z-rerank-cohere-v35-v1-rag.json  2026-06-14T18-18-58Z-rerank-cohere-pro-v1.json  2026-06-14T19-45-36Z-gen-rerank-pro-v1-agent.json  2026-06-14T20-21-45Z-hybrid-v1-rag.json  2026-06-14T20-24-19Z-dense-ctx-v1-rag.json  2026-06-15T12-18-31Z-gen-agent-v2.json  2026-06-15T13-44-11Z-gen-agent-v2-judge-v3.2-agent.json  2026-06-15T15-22-22Z-probe-a-attrib-qwen-smoke.json  2026-06-15T16-35-38Z-probe-b-attrib-qwen-smoke.json  2026-06-15T18-01-51Z-gen-agent-v3-deepseek-pro.json  2026-06-15T20-33-07Z-gen-agent-promptv3-deepseek.json  2026-06-16T08-01-40Z-gen-agent-v4-deepseek-agent.json  2026-06-16T11-18-42Z-gen-agent-v5-5fail-smoke.json  2026-06-16T13-07-18Z-gen-agent-v5-agent.json  2026-06-16T13-35-17Z-gen-agent-v5-refusal-repro.json  2026-06-17T13-11-50Z-agent-v6-smoke.json  2026-06-17T14-09-09Z-gen-agent-v6-agent.json  2026-06-18T10-41-16Z-spot-oos-v3.4-smoke.json  (+3 more)
backend/evals/security_runs/: 2026-06-17T07-48-48+00-00-security-baseline-gemma-baseline.json  2026-06-17T07-51-30+00-00-security-baseline-deepseek.json  2026-06-17T08-15-49+00-00-security-baseline-gemma-v2-baseline.json  2026-06-17T08-21-51+00-00-security-baseline-deepseek-v2.json  2026-06-17T09-23-40+00-00-audit-gemma-baseline.json  2026-06-17T09-24-16+00-00-audit-gemma-defended.json  2026-06-17T09-31-39+00-00-audit-deepseek-baseline.json  2026-06-17T09-33-42+00-00-audit-deepseek-defended.json
backend/spikes/d1/: common.py  spike_langgraph.py  spike_llamaindex.py
backend/src/ahx/: __init__.py  _http.py  cli.py  config.py  db.py  guard.py  llm.py  mcp_server.py  obs.py  pricing.py  pricing_snapshot.json
backend/src/ahx/agent/: __init__.py  actions.py  graph.py  prompts.py  runner.py  state.py  tools.py
backend/src/ahx/api/: __init__.py  app.py  chunks.py  evals.py  limits.py  sources.py
backend/src/ahx/evals/: __init__.py  generation.py  golden.py  retrieval.py  runs.py  security.py
backend/src/ahx/generation/: __init__.py  citations.py  pipeline.py  prompt.py
backend/src/ahx/ingest/: __init__.py  chunker.py  clean.py  download.py  enrich.py  gutenberg.py  manifest.py  model.py  parsers.py  pipeline.py
backend/src/ahx/retrieval/: __init__.py  dense.py  embedding.py  factory.py  rerank.py  rrf.py  sparse.py
backend/tests/: test_agent.py  test_api.py  test_config.py  test_embedding.py  test_eval_generation.py  test_eval_generation_run.py  test_eval_retrieval.py  test_eval_runs.py  test_factory.py  test_fallback.py  test_generation.py  test_golden.py  test_ingest_chunker.py  test_ingest_clean.py  test_ingest_enrich.py  test_ingest_gutenberg.py  test_ingest_manifest.py  test_ingest_parsers.py  test_ingest_pipeline.py  test_integration.py  test_limits.py  test_llm.py  test_obs.py  test_pricing.py  test_retrieval_dense.py  test_retrieval_hybrid.py  test_retrieval_rerank.py  test_security.py
backend/tests/fixtures/: parity.json
corpus/: README.md  ai_historian_corpus_eu_pd.txt
docs/: chunking.md  embeddings.md  eval-log.md  golden-set.md  python-stack.md  rag-techniques.md  vector-stores.md
docs/adr/: 001-d1-framework.md  002-d2-embeddings.md  003-d5-llm-lineup.md  004-d4-frontend.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  index.html  nginx.conf.template  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/design/: chat-05-hybrid.html  golden-01-table.html  security-01-table.html  sources-01-table.html
frontend/src/: index.css  main.tsx  router.tsx  vite-env.d.ts
frontend/src/components/: ErrorBoundary.tsx  HealthBadge.tsx  Layout.tsx  PageStub.tsx  SourceDrawer.tsx
frontend/src/components/chat/: AnswerMessage.tsx  Composer.tsx  DeepPanel.tsx  FoundChunks.tsx  InstrumentBar.tsx  Landing.tsx  ReasoningPanel.tsx  useElapsedSeconds.ts
frontend/src/components/evals/: CategoryAggTable.tsx  CategoryBadge.tsx  EvalStatBar.tsx  GoldenRowDetail.tsx  GoldenTable.tsx  MetricChip.tsx
frontend/src/components/security/: AttackRowDetail.tsx  AttackTable.tsx  OutcomeChip.tsx  SecurityCategoryTable.tsx  SecurityStatBar.tsx
frontend/src/lib/: api.ts  chat.test.ts  chat.ts  evals.test.ts  evals.ts  schemas.test.ts  schemas.ts  security.test.ts  security.ts  session.test.ts  session.ts  sources.test.ts  sources.ts  sse.test.ts  sse.ts  types.ts
frontend/src/routes/: Chat.tsx  Evals.tsx  HowItWorks.tsx  Security.tsx  Sources.tsx
(+8 files in other folders)
