[project]
name = "ahx"
version = "0.1.0"
description = "Antic Historian — production-grade RAG over ancient-history sources (backend service)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "typer>=0.15",
    "rich>=13.9",
    "structlog>=24.4",
    "sse-starlette>=2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pyright>=1.1.390",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
]

[project.scripts]
ahx = "ahx.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ahx"]

[tool.ruff]
target-version = "py313"
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import order)
    "UP",  # pyupgrade (modern syntax)
    "B",   # bugbear (real-bug patterns, incl. mutable default args)
    "SIM", # simplify
    "C4",  # comprehension cleanups
    "RUF", # ruff-native rules
]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
