[project]
name = "ahx"
version = "0.1.0"
description = "Antic Historian — production-grade RAG over ancient-history sources (backend service)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "mcp>=1.2",
    "pgvector>=0.3",
    "pyyaml>=6.0",
    "psycopg[binary]>=3.2",
    "sqlalchemy[asyncio]>=2.0",
    "tiktoken>=0.8",
    "typer>=0.15",
    "rich>=13.9",
    "structlog>=24.4",
    "sse-starlette>=2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pyright>=1.1.390",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "types-pyyaml>=6.0",
]
# D1 framework spike only — removed (along with spikes/) once the gate is decided.
spike = [
    "llama-index-core>=0.12",
    "llama-index-llms-openai-like>=0.3",
    "llama-index-embeddings-openai-like>=0.3",
    "langgraph>=0.3",
    "langchain-openai>=0.3",
    "langchain-text-splitters>=0.3",
]

[project.scripts]
ahx = "ahx.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ahx"]

[tool.ruff]
target-version = "py313"
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import order)
    "UP",  # pyupgrade (modern syntax)
    "B",   # bugbear (real-bug patterns, incl. mutable default args)
    "SIM", # simplify
    "C4",  # comprehension cleanups
    "RUF", # ruff-native rules
]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
