[project]
name = "ahx"
version = "0.1.0"
description = "Antique Historian — production-grade RAG over ancient-history sources (backend service)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "mcp>=1.2",
    "pgvector>=0.3",
    "pyyaml>=6.0",
    "psycopg[binary]>=3.2",
    "sqlalchemy[asyncio]>=2.0",
    "tiktoken>=0.8",
    "typer>=0.15",
    "rich>=13.9",
    "structlog>=24.4",
    "sse-starlette>=2.1",
    "langgraph>=1.0",
    "langfuse>=4.9",
    # Security floor: starlette <1.3.0 carries CVE-2026-54282 / CVE-2026-54283 (pulled
    # transitively via fastapi). Pin the fixed floor directly so `pip-audit` (CI) stays
    # green and the deployed image never ships the vulnerable range.
    "starlette>=1.3.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pyright>=1.1.390",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "types-pyyaml>=6.0",
]

[project.scripts]
ahx = "ahx.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ahx"]

[tool.ruff]
target-version = "py313"
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import order)
    "UP",  # pyupgrade (modern syntax)
    "B",   # bugbear (real-bug patterns, incl. mutable default args)
    "SIM", # simplify
    "C4",  # comprehension cleanups
    "RUF", # ruff-native rules
]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# `integration` tests hit real Postgres / hosted LLMs and SKIP themselves when the
# required env (AHX_DATABASE_URL etc.) is absent. Excluded from the default run (and
# CI) so the suite stays hermetic + fast; opt in with `uv run pytest -m integration`.
addopts = "-m 'not integration'"
markers = [
    "integration: requires live Postgres and/or hosted LLM endpoints (skips without env)",
]

[tool.coverage.run]
source = ["ahx"]
omit = [
    # Live/interactive glue exercised by hand via the CLI, not unit tests:
    "src/ahx/cli.py",            # Typer wiring over the offline ingest/eval commands
    "src/ahx/mcp_server.py",     # MCP transport glue (golden-set authoring)
    "src/ahx/ingest/download.py",  # Gutenberg HTTP download (one-time, networked)
]

[tool.coverage.report]
# Ratchet: the unit-testable core must not regress below this. Raise as coverage grows.
fail_under = 80
show_missing = true
